[gd_scene load_steps=7 format=3 uid="uid://c1me3gwjrirhu"]

[ext_resource type="Script" uid="uid://ddhygxko77s77" path="res://ui.gd" id="1_27fn8"]
[ext_resource type="Texture2D" uid="uid://yf72ykb46f6d" path="res://ui/menu.png" id="1_fyqef"]
[ext_resource type="FontFile" uid="uid://clg02a70bc1yw" path="res://font/GrapeSoda.ttf" id="3_nltto"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m6e0p"]
texture = ExtResource("1_fyqef")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27fn8"]
content_margin_left = 7.0
content_margin_top = 4.0
content_margin_right = 7.0
content_margin_bottom = 10.0
bg_color = Color(0.258824, 0.0117647, 0, 1)
border_width_bottom = 2
border_color = Color(0.823471, 0.417638, 0.564971, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nltto"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.256873, 0.0103053, 0, 1)
border_width_bottom = 2
border_color = Color(0.514161, 0.228202, 0.139617, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27fn8")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 427.0
offset_bottom = 241.0
theme_override_styles/panel = SubResource("StyleBoxTexture_m6e0p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 5
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.335681
anchor_top = 0.279167
anchor_right = 0.652582
anchor_bottom = 0.7875
offset_left = 3.99989
offset_top = 21.9999
offset_right = 3.99988
offset_bottom = 21.9999
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxFlat_27fn8")
theme_override_styles/normal = SubResource("StyleBoxFlat_nltto")
text = "Play"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxFlat_27fn8")
theme_override_styles/normal = SubResource("StyleBoxFlat_nltto")
text = "Setting"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxFlat_27fn8")
theme_override_styles/normal = SubResource("StyleBoxFlat_nltto")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.0
offset_top = 33.0
offset_right = 120.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_nltto")
theme_override_font_sizes/font_size = 25
text = "N7 HORROR GAME"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
